# design_pattern_structure

./: LICENSE  设计模式.md
cpp_pro/: CMakeLists.txt  main.cpp
cpp_pro/creator/: singleton.h
cpp_pro/operator_type/chain_of_responsibility/: abs_handler.cpp  abs_handler.h  concrete_handler.cpp  concrete_handler.h  request.cpp  request.h
java_pro/: build.gradle  settings.gradle
java_pro/src/main/java/jv/com/tencent/cain/design_pattern/abstract_factory/: AbstractFactoryPattern.java  AccessDepartment.java  AccessUser.java  DataAccessFactory.java  Department.java  IDepartment.java  IUser.java  SqlserverDepartment.java  SqlserverUser.java  User.java
java_pro/src/main/java/jv/com/tencent/cain/design_pattern/adapter/: AdapterPattern.java  ForeignCenterPlayer.java  ForwardPlayer.java  GuardPlayer.java  Player.java  TranslateAdapter.java
java_pro/src/main/java/jv/com/tencent/cain/design_pattern/bridge/: BridgePattern.java  HandsetBrand.java  HandsetBrandNokia.java  HandsetBrandSamSung.java  HandsetSoft.java  HandsetSoftContact.java  HandsetSoftMp3.java
java_pro/src/main/java/jv/com/tencent/cain/design_pattern/builder/: Builder.java  BuilderPattern.java  ConcreteBuilder1.java  ConcreteBuilder2.java  Director.java  (+1 more)
java_pro/src/main/kotlin/kt/com/tencent/cain/desigin_pattern/: ParkingLoan.kt
java_pro/src/main/resources/: AbstractFactory.puml  Adapter.puml  Bridge.puml  Builder.puml  ChainResponsibility.puml  Command.puml  Composite.puml  Facade.puml  FlyWeight.puml  Interpret.puml  Mediator.puml  Memento.puml  Observer.puml  StatePattern.puml  Visitor.puml  设计模式.mdj
(+232 files in other folders)
